--- a/_config.yml
+++ b/_config.yml
@@ -51,9 +51,8 @@ descriptions:
   - cat: jekyll
     desc: "Posts describing Jekyll setup techniques."
 
-  - cat: dummy
-    desc: "Just some placeholder posts, lorem ipsum and the rest."
-
+  - cat: 융합 캡스톤 디자인
+    desc: "융합 캡스톤 디자인 수업 중에 진행한 프로젝트들입니다"
 # Social icons and sharing options
 #
 # Social settings are used in two places:
