--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ exclude:
   - "/vendor/"
 
 # Site settings
-title: 아는척 하는 블로그
+title: 그저 지나가던 순진한 개발자
 subtitle: "별로 잘 알지도 못하면서 아는 척 하는 사람입니다"
 email: wkblack11@gmail.com
 name: Lim Untaek
