--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ url: "https://untaek.github.io/" # the base hostname & protocol for your site
 cover: "/assets/header_image.jpg"
 logo: "/assets/logo.png"
 disqus_shortname: untaek
+ga_tracking_id: UA-116359227-1
 
 # Build settings
 markdown: kramdown
